js/parser.js
/**
 * This file was generated from parser.peg
 * See http://canopy.jcoglan.com/ for documentation.
 */

(function() {
  'use strict';

  var extend = function(destination, source) {
    if (!destination || !source) return destination;
    for (var key in source) {
      if (destination[key] !== source[key])
        destination[key] = source[key];
    }
    return destination;
  };

  var formatError = function(input, offset, expected) {
    var lines = input.split(/\n/g),
        lineNo = 0,
        position = 0;

    while (position <= offset) {
      position += lines[lineNo].length + 1;
      lineNo += 1;
    }
    var message = 'Line ' + lineNo + ': expected ' + expected.join(', ') + '\n',
        line = lines[lineNo - 1];

    message += line + '\n';
    position -= line.length + 1;

    while (position < offset) {
      message += ' ';
      position += 1;
    }
    return message + '^';
  };

  var inherit = function(subclass, parent) {
    var chain = function() {};
    chain.prototype = parent.prototype;
    subclass.prototype = new chain();
    subclass.prototype.constructor = subclass;
  };

  var TreeNode = function(text, offset, elements) {
    this.text = text;
    this.offset = offset;
    this.elements = elements;
  };

  TreeNode.prototype.forEach = function(block, context) {
    for (var el = this.elements, i = 0, n = el.length; i < n; i++) {
      block.call(context, el[i], i, el);
    }
  };

  var TreeNode1 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['tag_pairs'] = elements[0];
    this['gcomment'] = elements[2];
    this['movetext'] = elements[3];
    this['score'] = elements[4];
  };
  inherit(TreeNode1, TreeNode);

  var TreeNode2 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['dlm'] = elements[9];
    this['key'] = elements[2];
    this['value'] = elements[5];
  };
  inherit(TreeNode2, TreeNode);

  var TreeNode3 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['move_number'] = elements[0];
    this['dlm'] = elements[19];
    this['white'] = elements[3];
    this['san'] = elements[3];
    this['wnags'] = elements[6];
    this['wcomment'] = elements[8];
    this['wvars'] = elements[10];
    this['black'] = elements[12];
    this['bnags'] = elements[14];
    this['bcomment'] = elements[16];
    this['bvars'] = elements[18];
    this['mcomment'] = elements[20];
  };
  inherit(TreeNode3, TreeNode);

  var TreeNode4 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[3];
    this['rank'] = elements[4];
    this['dlm'] = elements[2];
  };
  inherit(TreeNode4, TreeNode);

  var TreeNode5 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[7];
    this['rank'] = elements[8];
    this['dlm'] = elements[4];
  };
  inherit(TreeNode5, TreeNode);

  var TreeNode6 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[5];
    this['rank'] = elements[6];
    this['dlm'] = elements[2];
  };
  inherit(TreeNode6, TreeNode);

  var TreeNode7 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[6];
    this['file'] = elements[9];
    this['rank'] = elements[10];
    this['dlm'] = elements[5];
  };
  inherit(TreeNode7, TreeNode);

  var TreeNode8 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[0];
    this['file'] = elements[8];
    this['rank'] = elements[9];
    this['dlm'] = elements[5];
  };
  inherit(TreeNode8, TreeNode);

  var TreeNode9 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[8];
    this['rank'] = elements[9];
    this['dlm'] = elements[4];
    this['piece'] = elements[5];
  };
  inherit(TreeNode9, TreeNode);

  var TreeNode10 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[0];
    this['takes'] = elements[1];
    this['square'] = elements[2];
  };
  inherit(TreeNode10, TreeNode);

  var TreeNode11 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[0];
    this['square'] = elements[3];
  };
  inherit(TreeNode11, TreeNode);

  var TreeNode12 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[0];
    this['square'] = elements[2];
  };
  inherit(TreeNode12, TreeNode);

  var TreeNode13 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[0];
    this['file'] = elements[1];
    this['square'] = elements[3];
  };
  inherit(TreeNode13, TreeNode);

  var TreeNode14 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['piece'] = elements[0];
    this['rank'] = elements[1];
    this['square'] = elements[3];
  };
  inherit(TreeNode14, TreeNode);

  var TreeNode15 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['file'] = elements[0];
    this['rank'] = elements[1];
  };
  inherit(TreeNode15, TreeNode);

  var TreeNode16 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['dlm'] = elements[2];
  };
  inherit(TreeNode16, TreeNode);

  var TreeNode17 = function(text, offset, elements) {
    TreeNode.apply(this, arguments);
    this['dlm'] = elements[4];
    this['movetext'] = elements[2];
  };
  inherit(TreeNode17, TreeNode);

  var FAILURE = {};

  var Grammar = {
    _read_game: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._game = this._cache._game || {};
      var cached = this._cache._game[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var index1 = this._offset, elements0 = new Array(6);
      var address1 = FAILURE;
      address1 = this._read_tag_pairs();
      if (address1 !== FAILURE) {
        elements0[0] = address1;
        var address2 = FAILURE;
        var index2 = this._offset;
        var chunk0 = null, max0 = this._offset + 1;
        if (max0 <= this._inputSize) {
          chunk0 = this._input.substring(this._offset, max0);
        }
        if (chunk0 !== null && /^[\n]/.test(chunk0)) {
          address2 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
          this._offset = this._offset + 1;
        } else {
          address2 = FAILURE;
          if (this._offset > this._failure) {
            this._failure = this._offset;
            this._expected = [];
          }
          if (this._offset === this._failure) {
            this._expected.push('[\\n]');
          }
        }
        if (address2 === FAILURE) {
          address2 = new TreeNode(this._input.substring(index2, index2), index2, []);
          this._offset = index2;
        }
        if (address2 !== FAILURE) {
          elements0[1] = address2;
          var address3 = FAILURE;
          var index3 = this._offset;
          address3 = this._read_comment();
          if (address3 === FAILURE) {
            address3 = new TreeNode(this._input.substring(index3, index3), index3, []);
            this._offset = index3;
          }
          if (address3 !== FAILURE) {
            elements0[2] = address3;
            var address4 = FAILURE;
            address4 = this._read_movetext();
            if (address4 !== FAILURE) {
              elements0[3] = address4;
              var address5 = FAILURE;
              var index4 = this._offset;
              address5 = this._read_score();
              if (address5 === FAILURE) {
                address5 = new TreeNode(this._input.substring(index4, index4), index4, []);
                this._offset = index4;
              }
              if (address5 !== FAILURE) {
                elements0[4] = address5;
                var address6 = FAILURE;
                var remaining0 = 0, index5 = this._offset, elements1 = [], address7 = true;
                while (address7 !== FAILURE) {
                  var chunk1 = null, max1 = this._offset + 1;
                  if (max1 <= this._inputSize) {
                    chunk1 = this._input.substring(this._offset, max1);
                  }
                  if (chunk1 !== null && /^[\s]/.test(chunk1)) {
                    address7 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
                    this._offset = this._offset + 1;
                  } else {
                    address7 = FAILURE;
                    if (this._offset > this._failure) {
                      this._failure = this._offset;
                      this._expected = [];
                    }
                    if (this._offset === this._failure) {
                      this._expected.push('[\\s]');
                    }
                  }
                  if (address7 !== FAILURE) {
                    elements1.push(address7);
                    --remaining0;
                  }
                }
                if (remaining0 <= 0) {
                  address6 = new TreeNode(this._input.substring(index5, this._offset), index5, elements1);
                  this._offset = this._offset;
                } else {
                  address6 = FAILURE;
                }
                if (address6 !== FAILURE) {
                  elements0[5] = address6;
                } else {
                  elements0 = null;
                  this._offset = index1;
                }
              } else {
                elements0 = null;
                this._offset = index1;
              }
            } else {
              elements0 = null;
              this._offset = index1;
            }
          } else {
            elements0 = null;
            this._offset = index1;
          }
        } else {
          elements0 = null;
          this._offset = index1;
        }
      } else {
        elements0 = null;
        this._offset = index1;
      }
      if (elements0 === null) {
        address0 = FAILURE;
      } else {
        address0 = this._actions.make_game(this._input, index1, this._offset, elements0);
        this._offset = this._offset;
      }
      this._cache._game[index0] = [address0, this._offset];
      return address0;
    },

    _read_tag_pairs: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._tag_pairs = this._cache._tag_pairs || {};
      var cached = this._cache._tag_pairs[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var remaining0 = 0, index1 = this._offset, elements0 = [], address1 = true;
      while (address1 !== FAILURE) {
        address1 = this._read_tag_pair();
        if (address1 !== FAILURE) {
          elements0.push(address1);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address0 = this._actions.make_tag_pairs(this._input, index1, this._offset, elements0);
        this._offset = this._offset;
      } else {
        address0 = FAILURE;
      }
      this._cache._tag_pairs[index0] = [address0, this._offset];
      return address0;
    },

    _read_tag_pair: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._tag_pair = this._cache._tag_pair || {};
      var cached = this._cache._tag_pair[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var index1 = this._offset, elements0 = new Array(10);
      var address1 = FAILURE;
      var chunk0 = null, max0 = this._offset + 1;
      if (max0 <= this._inputSize) {
        chunk0 = this._input.substring(this._offset, max0);
      }
      if (chunk0 === '[') {
        address1 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
        this._offset = this._offset + 1;
      } else {
        address1 = FAILURE;
        if (this._offset > this._failure) {
          this._failure = this._offset;
          this._expected = [];
        }
        if (this._offset === this._failure) {
          this._expected.push('"["');
        }
      }
      if (address1 !== FAILURE) {
        elements0[0] = address1;
        var address2 = FAILURE;
        address2 = this._read_dlm();
        if (address2 !== FAILURE) {
          elements0[1] = address2;
          var address3 = FAILURE;
          address3 = this._read_key();
          if (address3 !== FAILURE) {
            elements0[2] = address3;
            var address4 = FAILURE;
            address4 = this._read_dlm();
            if (address4 !== FAILURE) {
              elements0[3] = address4;
              var address5 = FAILURE;
              var chunk1 = null, max1 = this._offset + 1;
              if (max1 <= this._inputSize) {
                chunk1 = this._input.substring(this._offset, max1);
              }
              if (chunk1 === '"') {
                address5 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
                this._offset = this._offset + 1;
              } else {
                address5 = FAILURE;
                if (this._offset > this._failure) {
                  this._failure = this._offset;
                  this._expected = [];
                }
                if (this._offset === this._failure) {
                  this._expected.push('"\\""');
                }
              }
              if (address5 !== FAILURE) {
                elements0[4] = address5;
                var address6 = FAILURE;
                address6 = this._read_value();
                if (address6 !== FAILURE) {
                  elements0[5] = address6;
                  var address7 = FAILURE;
                  var chunk2 = null, max2 = this._offset + 1;
                  if (max2 <= this._inputSize) {
                    chunk2 = this._input.substring(this._offset, max2);
                  }
                  if (chunk2 === '"') {
                    address7 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
                    this._offset = this._offset + 1;
                  } else {
                    address7 = FAILURE;
                    if (this._offset > this._failure) {
                      this._failure = this._offset;
                      this._expected = [];
                    }
                    if (this._offset === this._failure) {
                      this._expected.push('"\\""');
                    }
                  }
                  if (address7 !== FAILURE) {
                    elements0[6] = address7;
                    var address8 = FAILURE;
                    address8 = this._read_dlm();
                    if (address8 !== FAILURE) {
                      elements0[7] = address8;
                      var address9 = FAILURE;
                      var chunk3 = null, max3 = this._offset + 1;
                      if (max3 <= this._inputSize) {
                        chunk3 = this._input.substring(this._offset, max3);
                      }
                      if (chunk3 === ']') {
                        address9 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
                        this._offset = this._offset + 1;
                      } else {
                        address9 = FAILURE;
                        if (this._offset > this._failure) {
                          this._failure = this._offset;
                          this._expected = [];
                        }
                        if (this._offset === this._failure) {
                          this._expected.push('"]"');
                        }
                      }
                      if (address9 !== FAILURE) {
                        elements0[8] = address9;
                        var address10 = FAILURE;
                        address10 = this._read_dlm();
                        if (address10 !== FAILURE) {
                          elements0[9] = address10;
                        } else {
                          elements0 = null;
                          this._offset = index1;
                        }
                      } else {
                        elements0 = null;
                        this._offset = index1;
                      }
                    } else {
                      elements0 = null;
                      this._offset = index1;
                    }
                  } else {
                    elements0 = null;
                    this._offset = index1;
                  }
                } else {
                  elements0 = null;
                  this._offset = index1;
                }
              } else {
                elements0 = null;
                this._offset = index1;
              }
            } else {
              elements0 = null;
              this._offset = index1;
            }
          } else {
            elements0 = null;
            this._offset = index1;
          }
        } else {
          elements0 = null;
          this._offset = index1;
        }
      } else {
        elements0 = null;
        this._offset = index1;
      }
      if (elements0 === null) {
        address0 = FAILURE;
      } else {
        address0 = this._actions.make_tag_pair(this._input, index1, this._offset, elements0);
        this._offset = this._offset;
      }
      this._cache._tag_pair[index0] = [address0, this._offset];
      return address0;
    },

    _read_key: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._key = this._cache._key || {};
      var cached = this._cache._key[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var remaining0 = 1, index1 = this._offset, elements0 = [], address1 = true;
      while (address1 !== FAILURE) {
        var chunk0 = null, max0 = this._offset + 1;
        if (max0 <= this._inputSize) {
          chunk0 = this._input.substring(this._offset, max0);
        }
        if (chunk0 !== null && /^[A-Za-z0-9_]/.test(chunk0)) {
          address1 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
          this._offset = this._offset + 1;
        } else {
          address1 = FAILURE;
          if (this._offset > this._failure) {
            this._failure = this._offset;
            this._expected = [];
          }
          if (this._offset === this._failure) {
            this._expected.push('[A-Za-z0-9_]');
          }
        }
        if (address1 !== FAILURE) {
          elements0.push(address1);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address0 = new TreeNode(this._input.substring(index1, this._offset), index1, elements0);
        this._offset = this._offset;
      } else {
        address0 = FAILURE;
      }
      this._cache._key[index0] = [address0, this._offset];
      return address0;
    },

    _read_value: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._value = this._cache._value || {};
      var cached = this._cache._value[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var remaining0 = 0, index1 = this._offset, elements0 = [], address1 = true;
      while (address1 !== FAILURE) {
        var chunk0 = null, max0 = this._offset + 1;
        if (max0 <= this._inputSize) {
          chunk0 = this._input.substring(this._offset, max0);
        }
        if (chunk0 !== null && /^[^\"]/.test(chunk0)) {
          address1 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
          this._offset = this._offset + 1;
        } else {
          address1 = FAILURE;
          if (this._offset > this._failure) {
            this._failure = this._offset;
            this._expected = [];
          }
          if (this._offset === this._failure) {
            this._expected.push('[^\\"]');
          }
        }
        if (address1 !== FAILURE) {
          elements0.push(address1);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address0 = new TreeNode(this._input.substring(index1, this._offset), index1, elements0);
        this._offset = this._offset;
      } else {
        address0 = FAILURE;
      }
      this._cache._value[index0] = [address0, this._offset];
      return address0;
    },

    _read_movetext: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._movetext = this._cache._movetext || {};
      var cached = this._cache._movetext[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var remaining0 = 0, index1 = this._offset, elements0 = [], address1 = true;
      while (address1 !== FAILURE) {
        address1 = this._read_move();
        if (address1 !== FAILURE) {
          elements0.push(address1);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address0 = this._actions.make_movetext(this._input, index1, this._offset, elements0);
        this._offset = this._offset;
      } else {
        address0 = FAILURE;
      }
      this._cache._movetext[index0] = [address0, this._offset];
      return address0;
    },

    _read_move: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._move = this._cache._move || {};
      var cached = this._cache._move[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var index1 = this._offset, elements0 = new Array(21);
      var address1 = FAILURE;
      address1 = this._read_move_number();
      if (address1 !== FAILURE) {
        elements0[0] = address1;
        var address2 = FAILURE;
        address2 = this._read_dlm();
        if (address2 !== FAILURE) {
          elements0[1] = address2;
          var address3 = FAILURE;
          address3 = this._read_dlm();
          if (address3 !== FAILURE) {
            elements0[2] = address3;
            var address4 = FAILURE;
            address4 = this._read_san();
            if (address4 !== FAILURE) {
              elements0[3] = address4;
              var address5 = FAILURE;
              address5 = this._read_dlm();
              if (address5 !== FAILURE) {
                elements0[4] = address5;
                var address6 = FAILURE;
                address6 = this._read_dlm();
                if (address6 !== FAILURE) {
                  elements0[5] = address6;
                  var address7 = FAILURE;
                  var index2 = this._offset;
                  address7 = this._read_nags();
                  if (address7 === FAILURE) {
                    address7 = new TreeNode(this._input.substring(index2, index2), index2, []);
                    this._offset = index2;
                  }
                  if (address7 !== FAILURE) {
                    elements0[6] = address7;
                    var address8 = FAILURE;
                    address8 = this._read_dlm();
                    if (address8 !== FAILURE) {
                      elements0[7] = address8;
                      var address9 = FAILURE;
                      var index3 = this._offset;
                      address9 = this._read_comment();
                      if (address9 === FAILURE) {
                        address9 = new TreeNode(this._input.substring(index3, index3), index3, []);
                        this._offset = index3;
                      }
                      if (address9 !== FAILURE) {
                        elements0[8] = address9;
                        var address10 = FAILURE;
                        address10 = this._read_dlm();
                        if (address10 !== FAILURE) {
                          elements0[9] = address10;
                          var address11 = FAILURE;
                          var index4 = this._offset;
                          address11 = this._read_variations();
                          if (address11 === FAILURE) {
                            address11 = new TreeNode(this._input.substring(index4, index4), index4, []);
                            this._offset = index4;
                          }
                          if (address11 !== FAILURE) {
                            elements0[10] = address11;
                            var address12 = FAILURE;
                            address12 = this._read_dlm();
                            if (address12 !== FAILURE) {
                              elements0[11] = address12;
                              var address13 = FAILURE;
                              var index5 = this._offset;
                              address13 = this._read_san();
                              if (address13 === FAILURE) {
                                address13 = new TreeNode(this._input.substring(index5, index5), index5, []);
                                this._offset = index5;
                              }
                              if (address13 !== FAILURE) {
                                elements0[12] = address13;
                                var address14 = FAILURE;
                                address14 = this._read_dlm();
                                if (address14 !== FAILURE) {
                                  elements0[13] = address14;
                                  var address15 = FAILURE;
                                  var index6 = this._offset;
                                  address15 = this._read_nags();
                                  if (address15 === FAILURE) {
                                    address15 = new TreeNode(this._input.substring(index6, index6), index6, []);
                                    this._offset = index6;
                                  }
                                  if (address15 !== FAILURE) {
                                    elements0[14] = address15;
                                    var address16 = FAILURE;
                                    address16 = this._read_dlm();
                                    if (address16 !== FAILURE) {
                                      elements0[15] = address16;
                                      var address17 = FAILURE;
                                      var index7 = this._offset;
                                      address17 = this._read_comment();
                                      if (address17 === FAILURE) {
                                        address17 = new TreeNode(this._input.substring(index7, index7), index7, []);
                                        this._offset = index7;
                                      }
                                      if (address17 !== FAILURE) {
                                        elements0[16] = address17;
                                        var address18 = FAILURE;
                                        address18 = this._read_dlm();
                                        if (address18 !== FAILURE) {
                                          elements0[17] = address18;
                                          var address19 = FAILURE;
                                          var index8 = this._offset;
                                          address19 = this._read_variations();
                                          if (address19 === FAILURE) {
                                            address19 = new TreeNode(this._input.substring(index8, index8), index8, []);
                                            this._offset = index8;
                                          }
                                          if (address19 !== FAILURE) {
                                            elements0[18] = address19;
                                            var address20 = FAILURE;
                                            address20 = this._read_dlm();
                                            if (address20 !== FAILURE) {
                                              elements0[19] = address20;
                                              var address21 = FAILURE;
                                              var index9 = this._offset;
                                              address21 = this._read_comment();
                                              if (address21 === FAILURE) {
                                                address21 = new TreeNode(this._input.substring(index9, index9), index9, []);
                                                this._offset = index9;
                                              }
                                              if (address21 !== FAILURE) {
                                                elements0[20] = address21;
                                              } else {
                                                elements0 = null;
                                                this._offset = index1;
                                              }
                                            } else {
                                              elements0 = null;
                                              this._offset = index1;
                                            }
                                          } else {
                                            elements0 = null;
                                            this._offset = index1;
                                          }
                                        } else {
                                          elements0 = null;
                                          this._offset = index1;
                                        }
                                      } else {
                                        elements0 = null;
                                        this._offset = index1;
                                      }
                                    } else {
                                      elements0 = null;
                                      this._offset = index1;
                                    }
                                  } else {
                                    elements0 = null;
                                    this._offset = index1;
                                  }
                                } else {
                                  elements0 = null;
                                  this._offset = index1;
                                }
                              } else {
                                elements0 = null;
                                this._offset = index1;
                              }
                            } else {
                              elements0 = null;
                              this._offset = index1;
                            }
                          } else {
                            elements0 = null;
                            this._offset = index1;
                          }
                        } else {
                          elements0 = null;
                          this._offset = index1;
                        }
                      } else {
                        elements0 = null;
                        this._offset = index1;
                      }
                    } else {
                      elements0 = null;
                      this._offset = index1;
                    }
                  } else {
                    elements0 = null;
                    this._offset = index1;
                  }
                } else {
                  elements0 = null;
                  this._offset = index1;
                }
              } else {
                elements0 = null;
                this._offset = index1;
              }
            } else {
              elements0 = null;
              this._offset = index1;
            }
          } else {
            elements0 = null;
            this._offset = index1;
          }
        } else {
          elements0 = null;
          this._offset = index1;
        }
      } else {
        elements0 = null;
        this._offset = index1;
      }
      if (elements0 === null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode3(this._input.substring(index1, this._offset), index1, elements0);
        this._offset = this._offset;
      }
      this._cache._move[index0] = [address0, this._offset];
      return address0;
    },

    _read_move_number: function() {
      var address0 = FAILURE, index0 = this._offset;
      this._cache._move_number = this._cache._move_number || {};
      var cached = this._cache._move_number[index0];
      if (cached) {
        this._offset = cached[1];
        return cached[0];
      }
      var index1 = this._offset, elements0 = new Array(2);
      var address1 = FAILURE;
      var remaining0 = 1, index2 = this._offset, elements1 = [], address2 = true;
      while (address2 !== FAILURE) {
        var chunk0 = null, max0 = this._offset + 1;
        if (max0 <= this._inputSize) {
          chunk0 = this._input.substring(this._offset, max0);
        }
        if (chunk0 !== null && /^[0-9]/.test(chunk0)) {
          address2 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
          this._offset = this._offset + 1;
        } else {
          address2 = FAILURE;
          if (this._offset > this._failure) {
            this._failure = this._offset;
            this._expected = [];
          }
          if (this._offset === this._failure) {
            this._expected.push('[0-9]');
          }
        }
        if (address2 !== FAILURE) {
          elements1.push(address2);
          --remaining0;
        }
      }
      if (remaining0 <= 0) {
        address1 = new TreeNode(this._input.substring(index2, this._offset), index2, elements1);
        this._offset = this._offset;
      } else {
        address1 = FAILURE;
      }
      if (address1 !== FAILURE) {
        elements0[0] = address1;
        var address3 = FAILURE;
        var chunk1 = null, max1 = this._offset + 1;
        if (max1 <= this._inputSize) {
          chunk1 = this._input.substring(this._offset, max1);
        }
        if (chunk1 === '.') {
          address3 = new TreeNode(this._input.substring(this._offset, this._offset + 1), this._offset, []);
          this._offset = this._offset + 1;
        } else {
          address3 = FAILURE;
          if (this._offset > this._failure) {
            this._failure = this._offset;
            this._expected = [];
          }
          if (this._offset === this._failure) {
            this._expected.push('"."');
          }
        }
        if (address3 !== FAILURE) {
          elements0[1] = address3;
        } else {
          elements0 = null;
          this._offset = index1;
        }
      } else {
        elements0 = null;
        this._offset = index1;
      }
      if (elements0 === null) {
        address0 = FAILURE;
      } else {
        address0 = new TreeNode(this._input.substring(index1, this._offset), index1, elements0);
        this._offset = this._offset;
      }
      this._cache._move_number[index0] = [address0, this._offset];
      return address0;
    },
